{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Tanks",
            "id": "3b9517ad-10c9-40d0-9145-de4502308b4a",
            "actions": [
                {
                    "name": "LeftMove",
                    "type": "PassThrough",
                    "id": "bad98377-b81d-40b3-a99d-8bd0d2c8772a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightMove",
                    "type": "PassThrough",
                    "id": "4dae0fc8-532c-4172-9e38-cf7a338bcd1c",
                    "expectedControlType": "",
                    "processors": "Normalize(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ba1c8e8b-f6df-4061-a202-5df23b6e0cb0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "94e74160-5e8c-4150-a22f-d964e1223ca6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "fbfbd7cf-f624-4a25-adcb-a7bf532b12f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "b200cda1-8695-4dd9-b16c-0f6b2539321f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "a1fd02e5-18c1-4a4c-be4e-bce7d3dce43d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "cad219d8-a1ab-4c0f-8828-36f927450b61",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "abe78eef-7fa2-4534-9522-d6aaa91642ac",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cca4925a-1067-4d72-b5fa-c199bac10888",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7ff013f5-aee3-40ab-8798-ae95db80964e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1fab7b29-a036-47d0-a770-dcb303ac5710",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Game",
            "id": "a5e824ab-a6b1-4fc7-8f93-db690ee2318c",
            "actions": [
                {
                    "name": "ReloadGame",
                    "type": "Button",
                    "id": "1988215c-e21c-444e-a869-0afdcf40d98e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReturnToMainMenu",
                    "type": "Button",
                    "id": "89080f6f-07ff-4a43-bb0d-550293f5edea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba63903a-1a7e-47e1-b3c1-ce40388ade7d",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ReloadGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16485a25-bb85-4173-a317-3b2402c8c30f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnToMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}